# freemat

./: .gitattributes  .gitignore  ArrayClass.txt  BuildInstructions.txt  CMakeBuildInstructions.txt  CMakeLists.txt  CMakeLists.txt_nix  NOTES.TXT  README.TXT  acinclude.m4  blas.ini  configure.in
FreeMat2/: FreeMat.pro  NOTES.TXT  acinclude.m4  configh.in  configure  configure.in  failed.txt
FreeMat2/libs/: Makefile.am
FreeMat2/libs/libARPACK/: libARPACK.pro
FreeMat2/libs/libCore/: Abs.cpp  Analyze.cpp  Array.cpp  Audio.cpp  Binary.cpp  Cast.cpp  Ceil.cpp  Clear.cpp  Conj.cpp  Constants.cpp  Control.cpp  Conv.cpp  Core.hpp  Cstruct.cpp  CumProd.cpp  CumSum.cpp  Directory.cpp  Dot.cpp  Eigen.cpp  Error.cpp  Eval.cpp  Exist.cpp  FFT.cpp  File.cpp  Find.cpp  Floor.cpp  Help.cpp  Hex.cpp  IO.cpp  Image.cpp  Inspect.cpp  Is.cpp  LU.cpp  LoadCore.cpp  Loader.cpp  Makefile.am  MatIO.cpp  MatIO.hpp  Matrix.cpp  Max.cpp  (+30 more)
FreeMat2/libs/libFFTPack/: libFFTPack.pro
FreeMat2/libs/libFN/: FNFun.cpp  Interp1D.cpp  OptFun.cpp
FreeMat2/libs/libFreeMat/: Algorithms.cpp  Algorithms.hpp  AnonFunc.cpp  Array.cpp  Array.hpp  ArrayPrivate.hpp  BasicArray.hpp  Cast.hpp  Class.cpp  Class.hpp  CommonIterator.hpp  Compiler.cpp  Compiler.hpp  Complex.hpp  Context.hpp  EigenDecompose.cpp  EigenDecompose.hpp  Exception.cpp  Exception.hpp  FastList.hpp  File.cpp  File.hpp  FuncPtr.cpp  FuncPtr.hpp  FunctionDef.cpp  FunctionDef.hpp  GetSet.hpp  IEEEFP.cpp  IEEEFP.hpp  IndexArray.cpp  IndexArray.hpp  Interpreter.cpp  Interpreter.hpp  LAPACK.hpp  LUDecompose.cpp  LUDecompose.hpp  LeastSquaresSolver.cpp  LeastSquaresSolver.hpp  LinearEqSolver.cpp  LinearEqSolver.hpp  (+35 more)
FreeMat2/libs/libGraphics/: Figure.cpp  Figure.hpp  GLRenderEngine.cpp  GLRenderEngine.hpp  HandleAxis.cpp  HandleCommands.cpp  HandleContour.cpp  HandleFigure.cpp  HandleImage.cpp  HandleObject.cpp  HandleObject.hpp  HandleProperty.cpp  HandleProperty.hpp  HandleSurface.cpp  HandleText.cpp  HandleUIControl.cpp  HandleWindow.cpp  ImageCommands.cpp  Plot2D.cpp  Plot2D.hpp  Plot3D.cpp  Plot3D.hpp  QTRenderEngine.cpp  QTRenderEngine.hpp  RenderEngine.hpp  ScalarImage.cpp  ScalarImage.hpp  SurfPlot.cpp  SurfPlot.hpp
FreeMat2/libs/libMex/: MexInterface.cpp
FreeMat2/libs/libXP/: BaseTerminal.cpp  Color.cpp  DynLib.cpp  DynLib.hpp  Editor.cpp  Editor.hpp  GUITerminal.hpp  KeyManager.cpp  KeyManager.hpp  MainApp.cpp  MainApp.hpp  PathSearch.hpp  PrintableWidget.hpp  QTGC.cpp  QTTerm.hpp  System.cpp  (+10 more)
FreeMat2/src/: DumbTerminal.cpp  InterpreterThread.cpp  MainApp.cpp  MainApp.hpp  Makefile.am  Terminal.cpp  Terminal.hpp  application.cpp  main.cpp  src.pro
FreeMat2/tools/: buildtool
dependencies/AMD/: CMakeLists.txt  make_conv.py  make_rules.cmake
dependencies/UMFPACK/: CMakeLists.txt  make_conv.py  make_rules.cmake
dependencies/lapack/: CMakeLists.txt  make.inc  makefile
experimental/: CMakeLists.txt
experimental/ArrayClass/: Array.cpp  Array.hpp  CMakeLists.txt  test1.cpp
experimental/JIT/: CMakeLists.txt
libs/libCore/: Abs.cpp  Analyze.cpp  Array.cpp  Audio.cpp  Binary.cpp  CMakeLists.txt  Cast.cpp  Ceil.cpp  Cell.cpp  Clear.cpp  Conj.cpp  Constants.cpp  Control.cpp  Conv.cpp  Core.hpp  Cstruct.cpp  CumProd.cpp  CumSum.cpp  Debug.cpp  Directory.cpp  Dot.cpp  Eigen.cpp  Error.cpp  Eval.cpp  Exist.cpp  FFT.cpp  File.cpp  Find.cpp  Floor.cpp  Help.cpp  Hex.cpp  IO.cpp  Image.cpp  Inspect.cpp  Is.cpp  LU.cpp  LoadCore.cpp  Loader.cpp  Makefile.am  MatIO.cpp  (+40 more)
libs/libFM/: AggregateType.hpp  Algorithms.cpp  Algorithms.hpp  AllTypes.hpp  AnonymousType.cpp  AnonymousType.hpp  ArrayFormatInfo.cpp  ArrayFormatInfo.hpp  ArrayType.cpp  ArrayType.hpp  Assembler.cpp  Assembler.hpp  BaseTypes.hpp  BinOp.hpp  BoolType.cpp  BoolType.hpp  BoundFunctionType.cpp  BoundFunctionType.hpp  BreakpointType.cpp  BreakpointType.hpp  BuiltInType.cpp  BuiltInType.hpp  CMakeLists.txt  CapturedType.hpp  CellType.cpp  CellType.hpp  ClassType.cpp  ClassType.hpp  Code.hpp  CodeType.cpp  CodeType.hpp  Compiler.cpp  Compiler.hpp  Complex.hpp  Config.hpp  Convert.hpp  Debug.cpp  Debug.hpp  DoubleType.cpp  DoubleType.hpp  (+88 more)
libs/libFN/: CMakeLists.txt  FNFun.cpp  Interp1D.cpp  Interp2D.cpp  OptFun.cpp  calerf.f  dcalerf.f  di0.f  di1.f  dj0y0.f  dj1y1.f  dk0.f  dk1.f  i0.f  i1.f  j0y0.f  j1y1.f  k0.f  k1.f  mathfunc.cpp  mathfunc2.cpp  mathfunc3.cpp  mathfunc4.cpp
libs/libFreeMat/: ,  Algorithms.cpp  Algorithms.hpp  AnonFunc.cpp  AnonFunc.hpp  Array.cpp  Array.hpp  ArrayPrivate.hpp  Assembler.cpp  Assembler.hpp  BasicArray.hpp  CMakeLists.txt  Cast.hpp  Class.cpp  Class.hpp  Code.hpp  CommonIterator.hpp  Compiler.cpp  Compiler.hpp  Complex.hpp  Context.hpp  DebugStream.hpp  DenseArray.hpp  Dimensions.cpp  DotOperator.hpp  EigenDecompose.cpp  EigenDecompose.hpp  Exception.cpp  Exception.hpp  FMEnvironment.hpp  FMObject.hpp  FMObject2.hpp  FMObject2_bak.hpp  FMObject3.hpp  FMObject4.hpp  FMObject5.hpp  FMPool.hpp  FMRefPtr.hpp  FMValue.hpp  FastList.hpp  (+72 more)
libs/libMatC/: CArray.cpp  CJitFunc.cpp  CMakeLists.txt  CodeGen.cpp  JIT.cpp  JIT.hpp  JITAnalysis.cpp  JITAnalysis.hpp  JITFunc.cpp  JITFunc.hpp  JITInfo.hpp  JITVM.cpp  MCScanner.cpp  header_paths.txt.in  sources.txt.in
libs/libMath/: CMakeLists.txt  blas.h  blas_conv.py  blas_dyn_link.cpp  blas_dyn_link.h  blas_header  blas_wrap.cpp  blas_wrap.h
libs/libXP/: CMakeLists.txt  Common.cpp  DataTable.cpp  DataTable.hpp  DebugWin.cpp  DebugWin.hpp  DynLib.cpp  DynLib.hpp  Editor.cpp  Editor.hpp  FMFontDialog.cpp  FMFontDialog.hpp  FileTool.cpp  FileTool.hpp  HistoryWidget.cpp  HistoryWidget.hpp  KeyManager.cpp  KeyManager.hpp  PathSearch.cpp  QTTerm.cpp  QTTerm.hpp  StackTool.cpp  StackTool.hpp  System.cpp  System.hpp  VariablesTool.cpp  VariablesTool.hpp  highlighter.cpp
src/: CMakeLists.txt  DebugStream.hpp  DumbTerminal.cpp  DumbTerminal.hpp  FreeMat.qrc  InterpreterThread.cpp  InterpreterThread.hpp  MainApp.cpp  MainApp.hpp  MainAppConsole.cpp  MainAppConsole.hpp  Makefile.am  Platform.hpp  QStdOutRedirector.hpp  Terminal.cpp  Terminal.hpp  application.cpp  application.hpp  main.cpp  main_console.cpp
(+6621 files in other folders)
